--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ class ModuleNewsReader extends ModuleNews
         <section data-transition="fade">
           <h2>Das News-Bundle (als schlechtes Beispiel)</h2>
 
-          <img src="/images/news-bundle.png" alt="News-Bundle Commit 2008" style="width: 100%">
+          <img src="images/news-bundle.png" alt="News-Bundle Commit 2008" style="width: 100%">
 
           <a href="https://github.com/contao/core/commit/4a2809d34ce08193c26b1c5815ecad2c1cdb909b">Der erste commit</a>
 
@@ -198,7 +198,7 @@ class ModuleNewsReader extends ModuleNews
         </section>
         <section data-transition="fade">
 
-          <img src="/images/graveyard.png" alt="Image graveyard with two plugins" style="width: 100%">
+          <img src="images/graveyard.png" alt="Image graveyard with two plugins" style="width: 100%">
 
           <aside class="notes">
             <ul>
@@ -211,8 +211,8 @@ class ModuleNewsReader extends ModuleNews
           <div style="display: grid; grid-template-columns: repeat(2, 1fr)">
             <p>Stylepicker4ward</p>
             <p>dlh_googlemaps</p>
-            <img src="/images/extensions/stylepicker_before.png" alt="Stylepicker before" style="width: 100%">
-            <img src="/images/extensions/maps_before.png" alt="Maps before" style="width: 100%">
+            <img src="images/extensions/stylepicker_before.png" alt="Stylepicker before" style="width: 100%">
+            <img src="images/extensions/maps_before.png" alt="Maps before" style="width: 100%">
           </div>
           <p>Manual installation: copy all files to system/modules/</p>
           <aside class="notes">
@@ -232,8 +232,8 @@ class ModuleNewsReader extends ModuleNews
         <section data-transition="fade">
           <h3>Wait for it</h3>
           <div style="display: grid; grid-template-columns: repeat(2, 1fr); align-items: center">
-            <img src="/images/waiting.webp" alt="Person waiting" style="width: 100%">
-            <img src="/images/rector-change.png" alt="Rector console" style="width: 100%">
+            <img src="images/waiting.webp" alt="Person waiting" style="width: 100%">
+            <img src="images/rector-change.png" alt="Rector console" style="width: 100%">
           </div>
         </section>
         <section data-transition="fade">
@@ -242,15 +242,15 @@ class ModuleNewsReader extends ModuleNews
           <div style="display: grid; grid-template-columns: repeat(2, 1fr)">
             <p>Stylepicker4ward</p>
             <p>dlh_googlemaps</p>
-            <img src="/images/extensions/stylepicker_after.png" alt="Stylepicker after" style="width: 100%">
-            <img src="/images/extensions/maps_after.png" alt="Stylepicker after" style="width: 100%">
+            <img src="images/extensions/stylepicker_after.png" alt="Stylepicker after" style="width: 100%">
+            <img src="images/extensions/maps_after.png" alt="Stylepicker after" style="width: 100%">
           </div>
         </section>
         <section data-transition="fade">
           <h3>Vortrag zu Ende... ?</h3>
         </section>
         <section data-transition="fade">
-          <img src="/images/must_refactor.jpeg" alt="Must refactor" style="width: 68vh">
+          <img src="images/must_refactor.jpeg" alt="Must refactor" style="width: 68vh">
         </section>
 
       </section>
@@ -537,12 +537,12 @@ class Foo extends \Controller
         </section>
 
         <section data-transition="fade">
-          <img src="/images/ast_dca.png" alt="Abstract Syntax Tree of a DCA" style="width: 100%">
+          <img src="images/ast_dca.png" alt="Abstract Syntax Tree of a DCA" style="width: 100%">
           <a href="https://getrector.com/ast/9e097952b5402901fe0b3d4dc769b3337265818e">Beispiel</a>
         </section>
 
         <section data-transition="fade">
-          <img src="/images/contao-rector.png" alt="Contao-Rector" style="width: 100%">
+          <img src="images/contao-rector.png" alt="Contao-Rector" style="width: 100%">
           <a href="https://getrector.com/ast/9e097952b5402901fe0b3d4dc769b3337265818e">Beispiel</a>
 
           <aside class="notes">
