--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@ class ModuleNewsReader extends ModuleNews
         </section>
 
         <section data-transition="fade">
+          <h3>Vortrag zu Ende</h3>
+        </section>
+
+        <section data-transition="fade">
           <h3>Vortrag zu Ende... ?</h3>
         </section>
 
