--- a/index.html
+++ b/index.html
@@ -9,12 +9,165 @@
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
-		<link rel="stylesheet" href="dist/theme/black.css">
+		<link rel="stylesheet" href="dist/theme/dracula.css" id="theme-stylesheet">
 
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
+    <style>
+      .theme__switches {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        position: absolute;
+        inset: 10px 10px auto auto;
+        z-index: 1;
+      }
+
+      .color__switch {
+        position: relative;
+        cursor: pointer;
+        font-size: 3.25px;
+        height: 8em;
+        width: 15em;
+        border-radius: 50px 0 0 50px;
+
+        transition: all .5s ease;
+        background: #282a36;
+        box-shadow: inset 0 0 0 2px #fff;
+
+        label {
+          position: absolute;
+          inset:0;
+          cursor: pointer;
+          text-indent: -999em;
+        }
+
+        input {
+          all: unset;
+          pointer-events: none;
+          position: absolute;
+          display: block;
+          border-radius: 50%;
+          transition: all 0.4s ease-in-out;
+          top: 1.5em;
+          left: 1.5em;
+          transform: rotate(-75deg);
+          width: 5em;
+          height: 5em;
+          background: #282a36;
+          box-shadow: 0.75em 0.625em 0 0 #d9fbff inset,
+          rgba(255, 255, 255, 0.1) 0 -1.75em 0 -2.25em,
+          rgba(255, 255, 255, 0.1) 1.5em 3.5em 0 -2.25em,
+          rgba(255, 255, 255, 0.1) 1em 6.5em 0 -2em,
+          rgba(255, 255, 255, 0.1) 3em 1em 0 -2.05em,
+          rgba(255, 255, 255, 0.1) 4em 4em 0 -2.25em,
+          rgba(255, 255, 255, 0.1) 3em 6.5em 0 -2.25em,
+          rgba(255, 255, 255, 0.1) -2em 3.6em 0 -2.25em,
+          rgba(255, 255, 255, 0.1) -.5em 5em 0 -2.25em;
+
+          &:checked {
+            top: 2.25em;
+            left: 9em;
+            transform: rotate(0deg);
+            width: 3.5em;
+            height: 3.5em;
+            background: #fff;
+            box-shadow:
+              1.5em 1.5em 0 2.5em #fff inset,
+              0 -2.5em 0 -1.35em #fff,
+              1.75em -1.75em 0 -1.5em #fff,
+              2.5em 0 0 -1.35em #fff,
+              1.75em 1.75em 0 -1.5em #fff,
+              0 2.5em 0 -1.35em #fff,
+              -1.75em 1.75em 0 -1.5em #fff,
+              -2.5em 0 0 -1.35em #fff,
+              -1.75em -1.75em 0 -1.5em #fff;
+          }
+        }
+      }
+
+      .theme__select {
+        label {
+          position: absolute;
+          inset: 0;
+          opacity: 0;
+          pointer-events: none;
+        }
+        select {
+          cursor: pointer;
+          height: 26px;
+          background: #282a36;
+          color: #fff;
+          border-radius: 0 50px 50px 0;
+          border: 2px solid #fff;
+          border-left-width: 0;
+          padding: 2px 8px;
+          max-width: 100px;
+          text-overflow: ellipsis;
+        }
+      }
+    </style>
 	</head>
 	<body>
+  <div class="theme__switches">
+    <div class="color__switch">
+      <input id="color-toggle" type="checkbox" />
+      <label for="color-toggle">Toggle Dark/Light Mode</label>
+    </div>
+    <div class="theme__select">
+      <label class="" for="theme-select">Themes</label>
+      <select id="theme-select">
+        <option value="">-</option>
+        <option value="beige.css">Beige</option>
+        <option value="black.css">Black</option>
+        <option value="black-contrast.css">Black Contrast</option>
+        <option value="blood.css">Blood</option>
+        <option value="league.css">League</option>
+        <option value="moon.css">Moon</option>
+        <option value="night.css">Night</option>
+        <option value="serif.css">Serif</option>
+        <option value="simple.css">Simple</option>
+        <option value="sky.css">Sky</option>
+        <option value="solarized.css">Solarized</option>
+        <option value="white-contrast.css">White Contrast</option>
+        <option value="white_contrast_compact_verbatim_headers.css">White Compact</option>
+      </select>
+    </div>
+  </div>
+
+  <script>
+    const themeLink = document.getElementById('theme-stylesheet');
+    const toggle = document.getElementById('color-toggle');
+    const select = document.getElementById('theme-select');
+
+    const setTheme = (file) => {
+      themeLink.href = 'dist/theme/' + file;
+      localStorage.setItem('themeFile', file);
+    };
+
+    const saved = localStorage.getItem('themeFile');
+    if (saved) {
+      setTheme(saved);
+      toggle.checked = saved === 'white.css';
+      if (saved !== 'white.css' && saved !== 'dracula.css') {
+        select.value = saved;
+      } else {
+        select.value = '';
+      }
+    }
+
+    toggle.addEventListener('change', () => {
+      setTheme(toggle.checked ? 'white.css' : 'dracula.css');
+      select.value = '';
+    });
+
+    select.addEventListener('change', () => {
+      if (select.value) {
+        setTheme(select.value);
+        toggle.checked = select.value === 'white.css';
+      }
+    });
+  </script>
 
   <div class="reveal">
     <div class="slides">
@@ -279,7 +432,7 @@ class ModuleNewsReader extends ModuleNews
         </section>
 
         <section data-transition="fade">
-          <h3>Vortrag zu Ende... ?</h3>
+          <h3>Vortrag zu Ende ... ?</h3>
         </section>
 
         <section data-transition="fade">
