--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        position: absolute;
+        position: fixed;
         inset: 10px 10px auto auto;
-        z-index: 1;
+        z-index: 2;
       }
 
       .color__switch {
