Adjust the description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Ein Leitfaden für moderne Best Practices in der Contao-Erweiterungsentwicklung">
+    <meta name="description" content="Ein Leitfaden für moderne Best Practices in der Entwicklung mit Contao">
 
 		<title>Contao - wie geht es heute?</title>
 
@@ -176,7 +176,7 @@
 
         <section data-transition="fade">
           <h1>Contao - wie geht es heute?</h1>
-          <p style="font-size: smaller">Ein Leitfaden für moderne Best Practices in der Anpassung der Applikationen und der Contao-Erweiterungsentwicklung</p>
+          <p style="font-size: smaller">Ein Leitfaden für moderne Best Practices in der Entwicklung mit Contao</p>
 
           <aside class="notes">
             <ul>
