--- a/index.html
+++ b/index.html
@@ -403,12 +403,7 @@ class ModuleNewsReader extends ModuleNews
         </section>
 
         <section data-transition="fade">
-          <h3>Step 2</h3>
-          <h4>Slap Rector on top of it</h4>
-        </section>
-
-        <section data-transition="fade">
-          <h3>Wait for it</h3>
+          <h3>Step 2: Use Rector</h3>
           <div style="display: grid; grid-template-columns: repeat(2, 1fr); align-items: center">
             <img src="images/waiting.webp" alt="Person waiting" style="width: 100%">
             <img src="images/rector-change.png" alt="Rector console" style="width: 100%">
