--- a/index.html
+++ b/index.html
@@ -636,7 +636,8 @@ services:
           <aside class="notes">
             <ul>
               <li>Contao stellt Attribute bereit, welche dir die Services taggen</li>
-              <li>Die fügst du lediglich in deinem Controller hizu</li>
+              <li>AsCallback erwähnen</li>
+              <li>Die fügst du lediglich in deinem Controller hinzu</li>
               <li>Technisch geht es zu sehr ins Detail aber Contao konfiguriert diese für dich im Service Container</li>
             </ul>
           </aside>
